// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeNode Props className 1`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <div
      class="rc-tree-node-row"
    >
      <div
        class="rc-tree-node-row-container"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher_open"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__open"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
    </div>
    <ul
      class="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="tree-node-cls rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <div
          class="rc-tree-node-row"
        >
          <div
            class="rc-tree-node-row-container"
          >
            <span
              class="rc-tree-switcher rc-tree-switcher_open"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
              title="---"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__open"
              />
              <span
                class="rc-tree-title"
              >
                ---
              </span>
            </span>
          </div>
        </div>
        <ul
          class="rc-tree-child-tree rc-tree-child-tree-open"
          data-expanded="true"
          role="group"
        >
          <li
            class="rc-tree-treenode-switcher-open"
            role="treeitem"
          >
            <div
              class="rc-tree-node-row"
            >
              <div
                class="rc-tree-node-row-container"
              >
                <span
                  class="rc-tree-switcher rc-tree-switcher-noop"
                />
                <span
                  class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
                  title="---"
                >
                  <span
                    class="rc-tree-iconEle rc-tree-icon__docu"
                  />
                  <span
                    class="rc-tree-title"
                  >
                    ---
                  </span>
                </span>
              </div>
            </div>
          </li>
        </ul>
      </li>
      <li
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <div
          class="rc-tree-node-row"
        >
          <div
            class="rc-tree-node-row-container"
          >
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="---"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
              >
                ---
              </span>
            </span>
          </div>
        </div>
      </li>
    </ul>
  </li>
  <li
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <div
      class="rc-tree-node-row"
    >
      <div
        class="rc-tree-node-row-container"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
    </div>
  </li>
</ul>
`;

exports[`TreeNode Props customize icon component 1`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <div
      class="rc-tree-node-row"
    >
      <div
        class="rc-tree-node-row-container"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__customize"
          >
            <span
              class="cust-icon"
            />
          </span>
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
    </div>
  </li>
</ul>
`;

exports[`TreeNode Props customize icon element 1`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <div
      class="rc-tree-node-row"
    >
      <div
        class="rc-tree-node-row-container"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__customize"
          >
            <span
              class="cust-icon"
            />
          </span>
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
    </div>
  </li>
</ul>
`;

exports[`TreeNode Props customize icon hide icon 1`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <div
      class="rc-tree-node-row"
    >
      <div
        class="rc-tree-node-row-container"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
    </div>
  </li>
</ul>
`;

exports[`TreeNode Props data and aria props renders aria attributes on li 1`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    aria-label="0-0"
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <div
      class="rc-tree-node-row"
    >
      <div
        class="rc-tree-node-row-container"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher_open"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__open"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
    </div>
    <ul
      class="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        aria-label="0-0-0"
        class="tree-node-cls rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <div
          class="rc-tree-node-row"
        >
          <div
            class="rc-tree-node-row-container"
          >
            <span
              class="rc-tree-switcher rc-tree-switcher_open"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
              title="---"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__open"
              />
              <span
                class="rc-tree-title"
              >
                ---
              </span>
            </span>
          </div>
        </div>
        <ul
          class="rc-tree-child-tree rc-tree-child-tree-open"
          data-expanded="true"
          role="group"
        >
          <li
            aria-label="0-0-0-0"
            class="rc-tree-treenode-switcher-open"
            role="treeitem"
          >
            <div
              class="rc-tree-node-row"
            >
              <div
                class="rc-tree-node-row-container"
              >
                <span
                  class="rc-tree-switcher rc-tree-switcher-noop"
                />
                <span
                  class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
                  title="---"
                >
                  <span
                    class="rc-tree-iconEle rc-tree-icon__docu"
                  />
                  <span
                    class="rc-tree-title"
                  >
                    ---
                  </span>
                </span>
              </div>
            </div>
          </li>
        </ul>
      </li>
      <li
        aria-label="0-0-1"
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <div
          class="rc-tree-node-row"
        >
          <div
            class="rc-tree-node-row-container"
          >
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="---"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
              >
                ---
              </span>
            </span>
          </div>
        </div>
      </li>
    </ul>
  </li>
  <li
    aria-label="0-1"
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <div
      class="rc-tree-node-row"
    >
      <div
        class="rc-tree-node-row-container"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
    </div>
  </li>
</ul>
`;

exports[`TreeNode Props data and aria props renders data attributes on li 1`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="rc-tree-treenode-switcher-open"
    data-test="0-0"
    role="treeitem"
  >
    <div
      class="rc-tree-node-row"
    >
      <div
        class="rc-tree-node-row-container"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher_open"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__open"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
    </div>
    <ul
      class="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="tree-node-cls rc-tree-treenode-switcher-open"
        data-test="0-0-0"
        role="treeitem"
      >
        <div
          class="rc-tree-node-row"
        >
          <div
            class="rc-tree-node-row-container"
          >
            <span
              class="rc-tree-switcher rc-tree-switcher_open"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
              title="---"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__open"
              />
              <span
                class="rc-tree-title"
              >
                ---
              </span>
            </span>
          </div>
        </div>
        <ul
          class="rc-tree-child-tree rc-tree-child-tree-open"
          data-expanded="true"
          role="group"
        >
          <li
            class="rc-tree-treenode-switcher-open"
            data-test="0-0-0-0"
            role="treeitem"
          >
            <div
              class="rc-tree-node-row"
            >
              <div
                class="rc-tree-node-row-container"
              >
                <span
                  class="rc-tree-switcher rc-tree-switcher-noop"
                />
                <span
                  class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
                  title="---"
                >
                  <span
                    class="rc-tree-iconEle rc-tree-icon__docu"
                  />
                  <span
                    class="rc-tree-title"
                  >
                    ---
                  </span>
                </span>
              </div>
            </div>
          </li>
        </ul>
      </li>
      <li
        class="rc-tree-treenode-switcher-open"
        data-test="0-0-1"
        role="treeitem"
      >
        <div
          class="rc-tree-node-row"
        >
          <div
            class="rc-tree-node-row-container"
          >
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="---"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
              >
                ---
              </span>
            </span>
          </div>
        </div>
      </li>
    </ul>
  </li>
  <li
    class="rc-tree-treenode-switcher-open"
    data-test="0-1"
    role="treeitem"
  >
    <div
      class="rc-tree-node-row"
    >
      <div
        class="rc-tree-node-row-container"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
    </div>
  </li>
</ul>
`;

exports[`TreeNode Props isLeaf 1`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    class=""
    role="treeitem"
  >
    <div
      class="rc-tree-node-row"
    >
      <div
        class="rc-tree-node-row-container"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
    </div>
    <ul
      class="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class=""
        role="treeitem"
      >
        <div
          class="rc-tree-node-row"
        >
          <div
            class="rc-tree-node-row-container"
          >
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="---"
            >
              <span
                class="rc-tree-title"
              >
                ---
              </span>
            </span>
          </div>
        </div>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`TreeNode Props isLeaf 2`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    class=""
    role="treeitem"
  >
    <div
      class="rc-tree-node-row"
    >
      <div
        class="rc-tree-node-row-container"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
    </div>
    <ul
      class="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class=""
        role="treeitem"
      >
        <div
          class="rc-tree-node-row"
        >
          <div
            class="rc-tree-node-row-container"
          >
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="---"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
              >
                ---
              </span>
            </span>
          </div>
        </div>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`TreeNode Props isLeaf 3`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <div
      class="rc-tree-node-row"
    >
      <div
        class="rc-tree-node-row-container"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher_open"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__open"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
    </div>
    <ul
      class="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <div
          class="rc-tree-node-row"
        >
          <div
            class="rc-tree-node-row-container"
          >
            <span
              class="rc-tree-switcher rc-tree-switcher_open"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
              title="---"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__open"
              />
              <span
                class="rc-tree-title"
              >
                ---
              </span>
            </span>
          </div>
        </div>
      </li>
    </ul>
  </li>
</ul>
`;
